--- a/app/appinfo.json
+++ b/app/appinfo.json
@@ -1,13 +1,10 @@
 {
-    "id": "com.appstore.app",
-    "version": "0.0.1",
-    "vendor": "My Company",
-    "type": "web",
-    "main": "index.html",
-    "title": "app",
-    "icon": "icon.png",
-    "requiredPermissions": [
-        "time.query",
-        "activity.operation"
-    ]
+  "id": "com.appstore.app",
+  "version": "0.0.1",
+  "vendor": "My Company",
+  "type": "web",
+  "main": "index.html",
+  "title": "app",
+  "icon": "icon.jpeg",
+  "requiredPermissions": ["time.query", "activity.operation"]
 }
